--- a/styles/less/home_page/collections.less
+++ b/styles/less/home_page/collections.less
@@ -2,7 +2,6 @@
 
 .overlay {
 	display: flex;
-
 	justify-content: center;
 	align-items: center;
 	background-color: black;
@@ -15,71 +14,49 @@
 		color: white;
 		font-family: 'Montserrat', sans-serif;
 	}
-	
 }
 
 #collections
 {
-	// .flex(@dir: column, @jus: space-around);
 	display: flex;
 	flex-wrap: wrap;
 	height: 100vh;
 	width: 100%;
 
-
-
-	@media only screen and (max-width: 767px)
+	@media only screen and (max-width: 959px)
 	{
-		margin-top: 10%;
+		flex-direction: column;
 	}
-
 }
-
 
 #collections_right {
 	display: flex;
 	flex-direction: column;
 	width: 50%;
+
+	@media only screen and (max-width: 959px)
+	{
+		width:100%;
+	}
 }
 
 .collections_image
 {
 	.imgbgcent();
-
 	&:hover > .overlay {
 		opacity: .65;
 	}
-	
-	@media only screen and (max-width: 959px)
-	{
-		height: 300px;
-	}
-
-	@media only screen and (max-width: 767px)
-	{
-		height: 250px;
-	}
-
-	@media only screen and (max-width: 575px)
-	{
-		height: 200px;
-	}
-
-	@media only screen and (max-width: 400px)
-	{
-		height: 100px;
-	}
-
 }
+
 #collections_image_1
 {
 	width: 50%;
 	background-image: url("../../images/promo_1.jpg");
 	 
-
 	@media only screen and (max-width: 959px)
 	{
-		background-image: url("../../images/promo_1_small.jpg");
+		width: 100%;
+		height: calc(100vh / 3);
 	}
 }
 
@@ -90,22 +67,17 @@
 
 	@media only screen and (max-width: 959px)
 	{
-		margin: 3% 0;
-	}
-
-	@media only screen and (max-width: 959px)
-	{
-		background-image: url("../../images/promo_2_small.jpg");
+		height: calc(100vh / 3);
 	}
 }
+
 #collections_image_3
 {
 	background-image: url("../../images/promo_3.jpg");
 	height: 50%;
 
-
 	@media only screen and (max-width: 959px)
 	{
-		background-image: url("../../images/promo_3_small.jpg");
+		height: calc(100vh / 3);
 	}
 }
