--- a/styles/less/home_page/testimonials.less
+++ b/styles/less/home_page/testimonials.less
@@ -13,9 +13,8 @@
 .test_text
 {
 	.w(85%);
-
 	margin: 0 auto;
-	font-family: 'Lucida', serif;
+	font-family: 'Montserrat', serif;
 	font-weight: lighter;
 	font-size: 2.25rem;
 	color: #8a8a8a;
@@ -32,26 +31,15 @@
 	{
 		font-size: 1.2rem;
 	}
-
-	@media only screen and (max-width: 400px)
-	{
-		font-size: .85rem;
-		margin-bottom: 3%;
-	}
-
 }
+
 .test_name
 {
-	font-family: 'Lucida', serif;
+	font-family: 'Bentham', serif;
 	font-weight: lighter;
 	.txtAlCent();
 	font-size: 1.55rem;
 	font-weight: 700;
 	color: #232323;
 	margin-top: 2%;
-
-	@media only screen and (max-width: 400px)
-	{
-		font-size: .9rem;
-	}
 }
