--- a/styles/less/global/global.less
+++ b/styles/less/global/global.less
@@ -1,34 +1,32 @@
-*, body, html {
+body, html {
+	width: 100%;
 	margin: 0;
 	padding: 0;
-	.txtShadow();
-	.bbox();
+	box-sizing: border-box;
+	font-family: 'Bentham', serif;
 }
 
-body {
-	width: 100vw;
-}
-
-ul {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 	list-style: none;
 }
-
-// p
-// {
-// 	font-size: 14px;
-// 	line-height: 2;
-// 	font-weight: 400;
-// 	color: #929191;
-// 	.txtShadow();
-// }
-
-// p a
-// {
-// 	display: inline;
-// 	position: relative;
-// 	color: inherit;
-// 	.trans200();
-// }
 
 a, a:hover, a:visited, a:active, a:link
 {
@@ -39,11 +37,7 @@ a, a:hover, a:visited, a:active, a:link
 h1 {
 	// .test(red);
 	font-size: 5.5rem;
-	font-family: 'Bentham', serif;
 	font-weight: 100;
-	letter-spacing: .025em;
-	color: @dgray;
-	white-space: nowrap;
 
 	@media only screen and (max-width: 575px)
 	{
@@ -53,21 +47,14 @@ h1 {
 	@media only screen and (max-width: 480px)
 	{
 		font-size: 4rem;
-	}
-	
+	}	
 }
 
 h2 {
-	color: @dgray;
-	font-family: 'Bentham', serif;
 	font-weight: 100;
 	font-size: 1.5rem;
 	white-space: nowrap;
 	margin-top: 15px;
-
-	
-	
-	
 
 	@media only screen and (max-width: 575px)
 	{
