--- a/styles/less/global/newsletter.less
+++ b/styles/less/global/newsletter.less
@@ -5,16 +5,30 @@
     margin-top: auto;
     align-self: center;
     // border: 2px solid red;
+
+    @media only screen and (max-width: 700px) {
+        width: 75%;
+    }
+
     h1 {
-        width: 100%;
         // border: 2px solid red;
         font-size: 3.37rem;
         margin-bottom: 2.5%;
+
+        @media only screen and (max-width: 700px) {
+            font-size: 2.5rem;
+        }
     }
 
     form {
         width: 100%;
         display: inline-flex;
+
+        @media only screen and (max-width: 700px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
     }
 
     input.newsletter_input {
@@ -24,5 +38,18 @@
         box-sizing: border-box;
         border-right: none;
 
+        @media only screen and (max-width: 700px) {
+            height: 35px;
+            width: 100%;
+            border-right: 1px solid black;
+        }
+    }
+
+    .button {
+        @media only screen and (max-width: 700px) {
+            height: 35px;
+            line-height: 35px;
+            width: 100%;
+        }
     }
 }
