--- a/styles/less/home_page/featured.less
+++ b/styles/less/home_page/featured.less
@@ -7,120 +7,56 @@
 	align-content: center;
 	height: 100vh;
 
-	@media only screen and (max-width: 400px)
+	@media only screen and (max-width: 959px)
 	{
-		margin: 15% 0;
+		flex-direction: column;
+		height: 300vh;
 	}
 }
 
 .product
 {
-	.w(30%);
-	.flex(@dir: column, @wrap: nowrap, @al: center);
-	justify-content: center;
+	width: calc(100vw / 3);
+	.flex(@dir: column, @wrap: nowrap, @al: center, @jus: center,);
 	// border: 2px solid red;
 	
 	@media only screen and (max-width: 959px)
 	{
-		width: 100%;
+		width: 100vw;
+		height: 100vh;
 	}
 }
 
 .product_image
 {
-	.w100();
-	height: 450px;
+	width: 100%;
+	height: calc(100vh /2);
 	.imgbgcent();
-
-	@media only screen and (max-width: 1380px)
-	{
-		height: 400px;
-	}
-
-	@media only screen and (max-width: 1100px)
-	{
-		background-size: contain;
-	}
-
-	@media only screen and (max-width: 959px)
-	{
-		height: 375px;
-		margin: 5% 0;
-	}
-
-	@media only screen and (max-width: 767px)
-	{
-		height: 250px;
-		margin-bottom: 2%;
-		background-size: contain;
-	}
-
-	@media only screen and (max-width: 480px)
-	{
-		height: 150px;
-	}
-
+	background-size: 100%;
+	// border: 2px solid red;
 }
 
-.product_name
+.product_info
 {
 	font-size: 1.3rem;
 	font-family: 'Montserrat', sans-serif;
-	color: #232323;
-	.trans200();
-
-	@media only screen and (max-width: 1380px)
-	{
-		font-size: 1.1rem;
-	}
-
-	@media only screen and (max-width: 1100px)
-	{
-		font-size: 1rem;
-	}
-
-	@media only screen and (max-width: 959px)
-	{
-		font-size: 2.1rem;
-	}
-
-	@media only screen and (max-width: 767px)
-	{
-		font-size: 1.8rem;
-	}
-
-	@media only screen and (max-width: 575px)
-	{
-		font-size: 1.5rem;
-	}
-
-	@media only screen and (max-width: 400px)
-	{
-		font-size: .9rem;
-	}
-
-
-}
-
-.product_name span
-{
-	@media only screen and (max-width: 575px)
-	{
-		display: block;
-		text-align: center;
-	}
-}
-
-.product_name a:hover
-{
-	color: #937c6f;
-}
-.product_price
-{
-	font-size: 1.5rem;
-	font-family: 'Montserrat', sans-serif;
-	color: #8a8a8a;
+	color: black;
 	.txtAlCent();
+
+	@media only screen and (min-width: 600px) and (max-width: 800px) {
+		font-size: 1.8rem;	
+	}
+
+	span {
+		@media only screen and (max-width: 1200px) {
+			display: block;
+			text-align: center;
+		}
+	}
+
+	p {
+		margin-top: 10px;
+	}
 }
 
 #product_1
