--- a/styles/less/home_page/landing_banner.less
+++ b/styles/less/home_page/landing_banner.less
@@ -3,7 +3,7 @@
 #home_container
 {
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	background-image:url("../../images/home_background.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
