--- a/styles/less/home_page/offers.less
+++ b/styles/less/home_page/offers.less
@@ -2,6 +2,9 @@
 
 #extra
 {
+	height: 95vh;
+	box-sizing: border-box;
+	padding: 5% 5%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -10,174 +13,41 @@
 	background-position: bottom right;
 	background-size: 55%;
 	background-repeat: no-repeat;
-	// .w100();
-	padding: 0 5%;
 	// border: 2px solid black;
-	height: 100vh;
 
-	@media only screen and (max-width: 959px)
-	{
-		flex-direction: column;
-		width: 80%;
-		margin: 20% auto;
-	}
-}
-.extra_promo
-{
-
-
-	@media only screen and (max-width: 1600px)
-	{
-		height: 550px;
+	@media only screen and (max-width: 1100px) {
+		justify-content: center;
+		background-image:url("../../images/extra_2_vert_.jpg");
+		background-size: 100% auto;
+		background-position: top;
+		border: 1px solid black;
+		width: 95%;
+		margin: 0 auto;
 	}
 
-	@media only screen and (max-width: 1100px)
-	{
-		height: 500px;
-	}
-
-	@media only screen and (max-width: 959px)
-	{
-		width: 100%;
-		margin-bottom: 5%;
-	}
-
-	@media only screen and (max-width: 400px)
-	{
-		height: 375px;
-	}
-}
-
-.extra_content
-{
-	.flex(@dir: column, @wrap: nowrap);
-	.w(70%);
-	height: 550px;
-	margin: 0 auto;
-	padding: 12% 0;
-
-	@media only screen and (max-width: 1600px)
-	{
-		height: 470px;
-	}
-
-	@media only screen and (max-width: 1100px)
-	{
-		width: 85%
-	}
-
-	@media only screen and (max-width: 959px)
-	{
-		height: 400px;
-	}
-}
-
-
-.extra_content .button {
-	margin-top: 3%;
-}
-#extra_promo_2
-{
-	border: 2px solid #937c6f;
-	background-image:url("../../images/extra_2.jpg");
-
-	@media only screen and (max-width: 959px)
-	{
-		background-image: url('../../images/extra_2_small.jpg');
-	}
-
-	@media only screen and (max-width: 700px)
-	{
-		background-image: url('../../images/extra_2_x_small.jpg');
-		background-position: right;
-	}
-
-	@media only screen and (max-width: 480px)
-	{
-		background-image: url('../../images/extra_2_smallest.jpg');
-		background-position: left;
-	}
-}
-
-#extra_text
-{
-	font-family: 'Beyond', sans-serif;
-	line-height: 2;
-	letter-spacing: 3px;
-	font-size: 7.25rem;
-	color: #232323;
-	margin-bottom: 10%;
-
-	@media only screen and (max-width: 1100px)
-	{
-		font-size: 4rem;
-		margin-bottom: 20%;
-	}
-
-	@media only screen and (max-width: 959px)
-	{
-		font-size: 5.25rem;
-		margin-bottom: 5%;
-	}
-
-	@media only screen and (max-width: 767px)
-	{
-		font-size: 4.5rem;
-		margin-bottom: 5%;
-	}
-
-	@media only screen and (max-width: 575px)
-	{
-		font-size: 5rem;
-		margin-bottom: 20%;
-	}
-
-	@media only screen and (max-width: 480px)
-	{
-		width: 100%;
-		font-size: 4rem;
+	p	{
+		font-family: 'Beyond', sans-serif;
+		line-height: 1.5;
+		letter-spacing: 2px;
+		font-size: 7.25rem;
+		color: #232323;
+		margin-bottom: 10%;
 		text-align: center;
-	}
 
-	@media only screen and (max-width: 400px)
-	{
-		font-size: 3.3rem;
-		margin-bottom: 20%;
-	}
+		@media only screen and (min-width: 2000px) {
+			font-size: 9rem; 
+		}
 
+		@media only screen and (min-width: 760px) {
+			margin-top: 5%; 
+		}
+	
+		@media only screen and (max-width: 760px) {
+			font-size: 4rem; 
+		}
+	}
 }
-#extra_2
-{
-	padding: 0;
-	margin-left: 7%;
 
-	@media only screen and (max-width: 1100px)
-	{
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items:flex-start;
-	}
-
-	@media only screen and (max-width: 959px)
-	{
-		align-items: flex-start;
-	}
-
-	@media only screen and (max-width: 480px)
-	{
-		display: flex;
-		flex-direction: column;
-		align-items:center;
-		justify-content: space-between;
-	}
-
-	@media only screen and (max-width: 400px)
-	{
-		justify-content: center;
-	}
-
-}
 
 #extra .button
 {
@@ -189,18 +59,22 @@
 	height: 50px;
 	line-height: 50px;
 	font-size: 1.5rem;
-	@media only screen and (max-width: 1100px)
-	{
-		margin-top: 0;
+
+	@media only screen and (min-width: 1400px) {
+		width: 350px;
+		height: 100px; 
+		line-height: 100px;
+	}
+	
+	@media only screen and (min-width: 959px) {
+		width: 300px;
+		height: 75px; 
+		line-height: 75px;
+		font-size: 2rem;
 	}
 
-	@media only screen and (max-width: 959px)
-	{
-		margin-top: 0%;
-	}
-
-	@media only screen and (max-width: 480px)
-	{
-		margin: 5% auto 0 auto;
+	@media only screen and (max-width: 1100px) {
+		align-self: center;
+		margin-left: 0;
 	}
 }
