cont'd mobile first reformatting of sections, offers, testimonials, and instafeed. including media queries for hidef and 4k devices.

--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -1,20 +1,21 @@
-@import "./tools/variables.less";
-@import "./tools/mixins.less";
-@import "./tools/fonts.less";
-@import "./tools/objects.less";
-@import "./global/global.less";
-@import "./global/header.less";
-@import "./global/navigation.less";
-@import "./global/burger_icon.less";
-@import "./global/mobile_menu.less";
-@import "./global/footer.less";
-@import "./global/newsletter.less";
-@import "./home_page/landing_banner.less";
-@import "./home_page/collections.less";
-@import "./home_page/featured.less";
-@import "./home_page/offers.less";
-@import "./home_page/testimonials.less";
-@import "./home_page/instafeed.less";
-@import "about.less";
-@import "contact.less";
-@import "thank_you.less";
+@import "./utilities/variables.less";
+@import "./utilities/mixins.less";
+@import "./utilities/fonts.less";
+@import "./utilities/components.less";
+@import "./utilities/reset.less";
+@import "./views/header/header.less";
+@import "./views/header/navigation.less";
+@import "./views/header/burger_icon.less";
+@import "./views/header/mobile_menu.less";
+@import "./views/footer/footer.less";
+@import "./views/footer/social.less";
+@import "./views/footer/newsletter.less";
+@import "./views/banner/banner.less";
+@import "./views/banner/banner_content.less";
+@import "./views/collections/collections.less";
+@import "./views/collections/overlay.less";
+@import "./views/featured/featured.less";
+@import "./views/offers/offers.less";
+@import "./views/testimonials/testimonials.less";
+@import "./views/instafeed/instafeed.less";
+
