--- a/styles/less/views/instafeed/instafeed.less
+++ b/styles/less/views/instafeed/instafeed.less
@@ -4,11 +4,11 @@
 @import "../../utilities/fonts.less";
 
 
-#instaCont {
-	// background: black;
-	// position: relative;
-	// border: 2px solid red;
-}
+// #instaCont {
+// 	// background: black;
+// 	// position: relative;
+// 	// border: 2px solid red;
+// }
 
 .arrow {
 	font-size: 2rem;
