--- a/styles/css/views/instafeed/instafeed.css
+++ b/styles/css/views/instafeed/instafeed.css
@@ -58,10 +58,6 @@
   font-family: 'Beyond';
   src: url('../../fonts/beyond_the_mountains.otf') format('opentype'), url('../../fonts/beyond_the_mountains.ttf') format('truetype');
 }
-#instaCont {
-  background: black;
-  position: relative;
-}
 .arrow {
   font-size: 2rem;
   position: absolute;
@@ -77,22 +73,13 @@
   transform: translateY(-50%);
 }
 #instafeed {
-  position: relative;
   height: 100vh;
-  background: black;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  overflow: hidden;
-}
-#instafeed .instaimg {
-  position: relative;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  transition: left 1s;
+  width: 100vw;
+  overflow: hidden;
+  background-color: black;
+}
+#instafeed .instaimg img {
+  width: 100vw;
 }
