--- a/styles/css/views/offers/offers.css
+++ b/styles/css/views/offers/offers.css
@@ -102,26 +102,55 @@
   }
 }
 .offer .button {
-  margin-bottom: 15%;
+  margin-bottom: 7%;
   border: 2px solid black;
-  width: 250px;
-  height: 100px;
-  line-height: 100px;
-  font-size: 1.5rem;
+  width: 200px;
+  height: 75px;
+  line-height: 75px;
+  font-size: 5vw;
+}
+@media only screen and (orientation: landscape) {
+  .offer .button {
+    font-size: 3.5vw;
+  }
+}
+@media only screen and (min-width: 700px) {
+  .offer .button {
+    font-size: 3vw;
+  }
 }
 @media only screen and (min-width: 959px) {
   .offer .button {
     width: 300px;
-    height: 250px;
-    line-height: 250px;
-    font-size: 2rem;
+    height: 115px;
+    line-height: 115px;
+    font-size: 4vw;
+  }
+}
+@media only screen and (min-width: 959px) and (orientation: landscape) {
+  .offer .button {
+    font-size: 3vw;
   }
 }
 @media only screen and (min-width: 1400px) {
   .offer .button {
     width: 350px;
-    height: 175px;
-    line-height: 175px;
-    font-size: 3rem;
+    height: 130px;
+    line-height: 130px;
+    font-size: 2vw;
+  }
+}
+@media only screen and (min-width: 3000px) {
+  .offer .button {
+    width: 700px;
+    height: 260px;
+    line-height: 260px;
+  }
+}
+@media only screen and (min-width: 6000px) {
+  .offer .button {
+    width: 1400px;
+    height: 520px;
+    line-height: 520px;
   }
 }
