--- a/styles/css/views/testimonials/testimonials.css
+++ b/styles/css/views/testimonials/testimonials.css
@@ -58,7 +58,7 @@
   font-family: 'Beyond';
   src: url('../../fonts/beyond_the_mountains.otf') format('opentype'), url('../../fonts/beyond_the_mountains.ttf') format('truetype');
 }
-#testimonials {
+.testimonials {
   margin: 0 5%;
   height: 100vh;
   display: flex;
@@ -66,32 +66,32 @@
   align-items: center;
 }
 .test_text {
-  width: 85%;
+  width: 95%;
   margin: 0 auto;
   font-family: 'Montserrat', serif;
   font-weight: lighter;
-  font-size: 2.25rem;
+  font-size: 4vh;
   color: #8a8a8a;
   font-style: italic;
   text-align: center;
-  line-height: 1.75;
+  line-height: 1.25;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (orientation: landscape) {
   .test_text {
-    font-size: 1.4rem;
-  }
-}
-@media only screen and (max-width: 575px) {
-  .test_text {
-    font-size: 1.2rem;
+    font-size: 4vw;
   }
 }
 .test_name {
   font-family: 'Bentham', serif;
   font-weight: lighter;
   text-align: center;
-  font-size: 1.55rem;
+  font-size: 3.5vh;
   font-weight: 700;
   color: #232323;
-  margin-top: 2%;
+  margin-top: 5%;
+}
+@media only screen and (orientation: landscape) {
+  .test_name {
+    font-size: 3.5vw;
+  }
 }
