--- a/styles/less/views/banner/banner_content.less
+++ b/styles/less/views/banner/banner_content.less
@@ -9,19 +9,24 @@
     margin-top: 15px;
     
     h1 {
-        font-size: 13vw;
+        font-size: 12vw;
         margin-bottom: 10vh;
 
-        @media only screen and (max-height:812px) and (orientation: portrait) {
+    
+        @media only screen and (min-width:768px) and (orientation: portrait) {
+            margin-bottom: 20vh;
+        }
+
+        @media only screen and (min-width:768px) and (orientation: landscape) {
+            font-size: 10vw;
+        }
+
+        @media only screen and (height:812px) and (orientation: portrait) {
             font-size: 25vw;
         }
 
-        @media only screen and (max-width:812px) and (orientation: landscape) {
+        @media only screen and (width:812px) and (orientation: landscape) {
             margin-top: 10vh;
-        }
-
-        @media only screen and (min-width:768px) and (orientation: portrait) {
-            font-size: 20vw;
         }
     }
 
@@ -33,10 +38,10 @@
         margin: 0 auto;
 
         @media only screen and (min-width:768px) {
-            width: 325px;
-            height: 108px;
-            line-height: 108px;
-            font-size: 1.90rem;
+            width: 250px;
+            height: 95px;
+            line-height: 105px;
+            font-size: 1.75rem;
         }
     }
 }
