--- a/styles/less/views/featured/featured.less
+++ b/styles/less/views/featured/featured.less
@@ -13,21 +13,41 @@
 	flex-direction: column;
 	width: 100%;
 	height: 300vh;
+	margin: 5% 0;
+
+	@media only screen and (min-height: 812px) and (orientation: portrait) {
+		height: 240vh;
+	}
+
+	@media only screen and (min-width: 1000px) {
+		width: 95%;
+		margin: 0 auto;
+		flex-direction: row;
+		justify-content: space-around;
+		height: 100vh;
+	}
 }
 
 .product
 {
 	height: 100vh;
 	.flex(@dir: column, @wrap: nowrap, @al: center, @jus: center,);
+
+	@media only screen and (min-height: 812px) and (orientation: portrait) {
+		height: 80vh;
+	}
 }
 
 .product_image
 {
-	// border: 2px solid red;
 	width: 45vh;
 
 	@media only screen and (orientation: landscape) {
 		width: 60vh;
+	}
+
+	@media only screen and (min-width: 1000px) {
+		width: 25vw;
 	}
 }
 
@@ -37,10 +57,18 @@
 	font-family: 'Montserrat', sans-serif;
 	color: black;
 	.txtAlCent();
-	margin-top: 5px;
+
+	@media only screen and (orientation: portrait) {
+		width: 80vw;
+	}
 
 	@media only screen and (orientation: landscape) {
 		font-size: 3.5vw;
+	}
+
+	@media only screen and (min-width: 1000px) {
+		width: 22vw;
+		font-size: 2.5vh;
 	}
 
 
