--- a/styles/less/views/testimonials/testimonials.less
+++ b/styles/less/views/testimonials/testimonials.less
@@ -27,6 +27,10 @@
 	@media only screen and (orientation: landscape) {
 		font-size: 4vw;
 	}
+
+	@media only screen and (min-width: 1200px) {
+		font-size: 2.7vw;
+	}
 }
 
 .test_name
